# pub_reverse_ad

./: .gitattributes  .gitignore  CMakeLists.txt  NewFile.cpp  README.md
include/: BaseExpr.hpp  Derivatives.hpp  ExprDerived.hpp  ExprOps.hpp  ReverseADStuff.hpp  Trigfuncs.hpp
src/: MainTest.cpp
